--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -32,7 +32,8 @@
   <span [routerLink]="['/local-body']" routerLinkActive="router-link-active"  class="btn btn-warning m-1"> Local body</span>
   <span [routerLink]="['/so']" routerLinkActive="router-link-active"  class="btn btn-warning m-1"> SO</span>
   <span [routerLink]="['/scheme']" routerLinkActive="router-link-active"  class="btn btn-warning m-1">Scheme</span>
-  <span [routerLink]="['/staff']" routerLinkActive="router-link-active"  class="btn btn-warning m-1">staff</span>
-  <span [routerLink]="['/local-body']" routerLinkActive="router-link-active"  class="btn btn-warning m-1"></span>
-  <span [routerLink]="['/local-body']" routerLinkActive="router-link-active"  class="btn btn-warning m-1"></span>
+  <span [routerLink]="['/staff']" routerLinkAcztive="router-link-active"  class="btn btn-warning m-1">staff</span>
+  <span [routerLink]="['/person']" routerLinkActive="router-link-active"  class="btn btn-warning m-1">person</span>
+  <span [routerLink]="['/position']" routerLinkActive="router-link-active"  class="btn btn-warning m-1">position</span>
+  <span [routerLink]="['/batch']" routerLinkActive="router-link-active"  class="btn btn-warning m-1">batch</span>
 </div>
