--- a/src/app/so/so.component.html
+++ b/src/app/so/so.component.html
@@ -229,7 +229,7 @@
                                 </option>
                             </select>
                         </div>
-                        <div class="form-group col-md-6">
+                       <!-- <div class="form-group col-md-6">
                             <label for="local">Local Body <span class="spinner-border p-1" role="status" *ngIf="loading">
                                 <span class="sr-only">Loading...</span>
                             </span></label>
@@ -237,7 +237,7 @@
                                 <option *ngFor="let item of createLBUnderDistrict" [value]="item['localBodyId']">{{item['name']}}
                                 </option>
                             </select>
-                        </div>
+                        </div> -->
                     </div>
                 </form>
 
@@ -378,7 +378,8 @@
                                 </option>
                             </select>
                         </div>
-                        <div class="form-group col-md-6">
+
+                       <!-- <div class="form-group col-md-6">
                             <label for="ulocal">Local Body <span class="spinner-border p-1" role="status" *ngIf="loading">
                                 <span class="sr-only">Loading...</span>
                             </span></label>
@@ -386,7 +387,7 @@
                                 <option *ngFor="let item of updateLBUnderDistrict" [value]="item['localBodyId']">{{item['name']}}
                                 </option>
                             </select>
-                        </div>
+                        </div> -->
                     </div>
                 </form>
 
