--- a/src/app/input/input.component.html
+++ b/src/app/input/input.component.html
@@ -1,13 +1,29 @@
 <div class="container-flex mt-5">
-  <div class="h1 text-center"> PIP Contract Generation</div>
+  <div class="h1 text-center"> SO Assignment</div>
 </div>
 <div class="wrapper container mt-5 mb-5">
   <form class="form" [formGroup]="contractForm">
     <div class="form-row">
-      <div class="form-group col-12">
+      <div class="form-group col-2">
+        <!-- select SO organization -->
+        <label for="batch">Select Batch</label>
+        <select id="batch" class="form-control" formControlName="batchId">
+          <option value='none'>Choose...</option>
+          <option *ngFor="let item of allBatch" [value]="item['batchId']">{{item['batchNo']}}</option>
+        </select>
+      </div>
+
+      <!-- <div class="form-group col-2">
+        <label for="projmanager">Select Batch</label>
+        <select id="projmanager" class="form-control" formControlName="batchId">
+          <option value='none'>Choose...</option>
+          <option *ngFor="let item of allBatch" [value]="item['batchId']">{{item['name']}}</option>
+        </select>
+      </div> -->
+      <div class="form-group col-8">
         <!-- select SO organization -->
         <label for="so">Select SO</label>
-        <select id="so" class="form-control">
+        <select id="so" class="form-control" formControlName="soId">
           <option value='none'>Choose...</option>
           <option *ngFor="let item of allSo" [value]="item['soId']">{{item['name']}}</option>
         </select>
@@ -17,18 +33,18 @@
     <div class="form-row">
       <div class="form-group col-md-6">
         <!-- select district -->
-        <label for="so">Select District <span class="spinner-border p-1" role="status" *ngIf="loading">
+        <label for="district">Select District <span class="spinner-border p-1" role="status" *ngIf="loading">
           <span class="sr-only">Loading...</span>
       </span> </label>
-        <select id="so" class="form-control" formControlName="district" (change)="selectDistrict(contractForm.value.district)">
+        <select id="district" class="form-control" formControlName="districtId" (change)="selectDistrict(contractForm.value.districtId)">
           <option value='none'>Choose...</option>
           <option *ngFor="let item of allDistrict" [value]="item['districtId']">{{item['name']}} </option>
         </select>
       </div>
       <div class="form-group col-md-6">
         <!-- select Municipality or VDC -->
-        <label for="muni">Select MUNICIPALITY or VDC</label>
-        <select id="muni" class="form-control">
+        <label for="muni">Select Local Body</label>
+        <select id="muni" class="form-control" formControlName="localBodyId">
           <option selected value='none'>Choose...</option>
           <option *ngFor="let item of localUnderDistrict" [value]="item['localBodyId']">{{item['name']}}</option>
 
@@ -39,14 +55,14 @@
       <div class="form-group col-6">
         <div class="form-row">
           <label for="so">Select Schemes</label>
-          <select id="so" class="form-control" formControlName="select">
+          <select id="so" class="form-control" formControlName="schemeId">
             <option selected value='none'>Choose...</option>
           <option *ngFor="let item of allSchemes;let i = index;" [value]="i">{{item['name']}}</option>
             
           </select>
         </div>
         <div class="form-row mt-2">
-          <button  class="btn btn-primary" (click)="addScheme(contractForm.value.select)">Select -></button>
+          <button  class="btn btn-primary" (click)="addScheme(contractForm.value.schemeId)">Select -></button>
         </div>
       </div>
       <div class="form-group col-6">
