--- a/src/app/staff/staff.component.html
+++ b/src/app/staff/staff.component.html
@@ -80,7 +80,8 @@
                 </td>
                 <td>{{item[formControlNames.nameNP]}}</td>
 
-                <span class="btn btn-primary rounded-circle rounded-circle-sm mr-2">
+                <span class="btn btn-primary rounded-circle rounded-circle-sm mr-2" data-toggle="modal"
+                    data-target="#addPeople" (click)="getPersonsUnderStaff(item[formControlNames.staffId])">
                     <i class="fa fa-user"> </i>
 
                 </span>
@@ -107,7 +108,7 @@
 
 
 <!-- create Modal -->
-<div class="modal fade" id="create" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+<div class="modal fade" id="create" tabindex="-1" role="dialog" aria-labelledby="create" aria-hidden="true">
     <div class="modal-dialog modal-xl" role="document">
         <div class="modal-content">
             <div class="modal-header">
@@ -163,7 +164,8 @@
     </div>
 </div>
 
-<div class="modal fade" id="update" tabindex="-1" role="dialog" aria-labelledby="updatelocalbody" aria-hidden="true">
+<!-- update modal -->
+<div class="modal fade" id="update" tabindex="-1" role="dialog" aria-labelledby="update" aria-hidden="true">
     <div class="modal-dialog modal-xl" role="document">
         <div class="modal-content">
             <div class="modal-header">
@@ -218,12 +220,12 @@
 </div>
 
 
-
-<div class="modal fade" id="attributes" tabindex="-1" role="dialog" aria-labelledby="updatelocalbody" aria-hidden="true">
+<!-- add people modal -->
+<div class="modal fade" id="addPeople" tabindex="-1" role="dialog" aria-labelledby="addPeople" aria-hidden="true">
     <div class="modal-dialog modal-xl" role="document">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title">Add </h5>
+                <h5 class="modal-title">Add People</h5>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
@@ -233,35 +235,85 @@
 
 
                 <form [formGroup]="updateStaffForm">
+                    <div class="row">
+                        <div class="form-group col-6">
+                            <table class="table table-striped">
+                                <thead>
+                                    <tr>
+                                        <th scope="col">#</th>
+                                        <th scope="col">Code</th>
+                                        <th scope="col">Name</th>
+                                        <th scope="col">Actions</th>
 
-                    <div class="form-row">
-                        <div class="form-group col-4">
-                            <label for="ucode">Staff Code</label>
-                            <input type="text" class="form-control" id="ucode" placeholder="staffCode"
-                                [formControlName]="formControlNames.staffCode">
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    <tr *ngFor="let item of allPerson; let i = index;">
+                                        <td>{{i+1}}</td>
+                                        <td>{{item['personCode']}}</td>
+                                        <td>
+                                            <span
+                                                *ngIf="item['firstName']">{{item['firstName']}}
+                                            </span>
+                                            <span
+                                                *ngIf="item['middleName']">{{item['middleName']}}
+                                            </span>
+                                            <span
+                                                *ngIf="item['lastName']">{{item['lastName']}}
+                                            </span>
+                                        </td>
+
+
+
+                                        <td>
+                                            <span class="btn btn-primary rounded-circle rounded-circle-sm mr-2"
+                                                (click)="addPersonUnderStaff(item['personId'])">
+                                                <i class="fa fa-plus"> </i>
+
+                                            </span>
+                                        </td>
+                                    </tr>
+
+                                </tbody>
+                            </table>
+                        </div>
+                        <div class="form-group col-6">
+                            <div class="card category-card">
+                                <h5 class="card-title text-center mx-2 mt-3 bg-light">Assigned Persons</h5>
+                                <div class="card-body mb-2 bg-light">
+                                    <div class="custom-height">
+                                        <div class="float-left mx-1">
+                                            <div class="card-title text-center">
+                                                <h6 *ngFor="let item of personUnderStaff;let i = index;"
+                                                    class="btn btn-success mr-2">
+                                                    <span>{{item['personCode'] + ' || '}}
+                                                    </span>
+                                                    <span
+                                                    *ngIf="item['firstName']">{{item['firstName']}}
+                                                </span>
+                                                    <span
+                                                        *ngIf="item['middleName']">{{item['middleName']}}
+                                                    </span>
+                                                    <span
+                                                        *ngIf="item['lastName']">{{item['lastName']}}
+                                                    </span>
+                                                    <span class="btn btn-danger rounded-circle" (click)="removePersonUnderStaff(item['staffAllocateId'])">
+                                                        <i class="fa fa-trash"></i>
+                                                    </span>
+                                                </h6>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                     </div>
-                    <div class="form-row">
-                        <div class="form-group col-6">
-                            <label for="uname">Name</label>
-                            <input type="text" class="form-control" id="uname" placeholder="Name"
-                                [formControlName]="formControlNames.name">
-                        </div>
-                        <div class="form-group col-6">
-                            <label for="unameNP">NameNP</label>
-                            <input type="text" class="form-control" id="unameNP" placeholder="NameNP"
-                                [formControlName]="formControlNames.nameNP">
-                        </div>
-                    </div>
-                   
-                   
+
                 </form>
 
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                <button type="submit" class="btn btn-primary" data-dismiss="modal"
-                    (click)="doEdit(updateStaffForm.value)">Update</button>
             </div>
         </div>
     </div>
